Added TempConversion :party:

--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,11 @@ body {
   background: #ed0a0f;
   color: white;
 }
+
+.convertTemp {
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 70px; 
+  text-decoration: none;
+}
